==> armel-31/pico-station/vl53l1x/vl53l1x.c <==
#include "vl53l1x.h"

uint8_t writeReg(uint16_t reg, uint8_t value)
{
    uint8_t buffer[3];
    buffer[0] = (reg >> 8) & 0xFF;
    buffer[1] = reg & 0xFF;
    buffer[2] = value;
    return i2c_write_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 3, false);
}

uint8_t writeReg16Bit(uint16_t reg, uint16_t value)
{
    uint8_t buffer[4];
    buffer[0] = (reg >> 8) & 0xFF;
    buffer[1] = reg & 0xFF;
    buffer[2] = (value >> 8) & 0xFF;
    buffer[3] = value & 0xFF;
    return i2c_write_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 4, false);
}

uint8_t writeReg32Bit(uint16_t reg, uint32_t value)
{
    uint8_t buffer[6];
    buffer[0] = (reg >> 8) & 0xFF;
    buffer[1] = reg & 0xFF;
    buffer[2] = (value >> 24) & 0xFF;
    buffer[3] = (value >> 16) & 0xFF;
    buffer[4] = (value >> 8) & 0xFF;
    buffer[5] = value & 0xFF;
    return i2c_write_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 6, false);
}

uint8_t readReg(uint16_t reg)
{
    uint8_t value;
    uint8_t buffer[2];
    buffer[0] = (reg >> 8) & 0xFF;
    buffer[1] = reg & 0xFF;
    i2c_write_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 2, true);
    i2c_read_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, &value, 1, false);
    return value;
}

uint16_t readReg16Bit(uint16_t reg)
{
    uint16_t value;
    uint8_t buffer[2];
    buffer[0] = (reg >> 8) & 0xFF;
    buffer[1] = reg & 0xFF;
    i2c_write_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 2, true);
    i2c_read_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 2, false);
    value = buffer[0] << 8 | buffer[1];
    return value;
}

uint32_t readReg32Bit(uint16_t reg)
{
    uint32_t value;
    uint8_t buffer[2];
    buffer[0] = (reg >> 8) & 0xFF;
    buffer[1] = reg & 0xFF;
    i2c_write_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 2, true);
    i2c_read_blocking(I2C_VL53L1X_PORT, VL53L1X_ADDRESS, buffer, 4, false);
    value = buffer[0] << 24 | buffer[1] << 16 | buffer[2] << 8 | buffer[3];
    return value;
}

uint8_t vl53l1x_init() {
    uint8_t ret = 0;
    uint32_t id;
    id = readReg16Bit(IDENTIFICATION__MODEL_ID);
    if(id != 0xEACC) {
        printf("Different with model id... (0x%x)\n", id);
        return 254;
    }

    ret = writeReg(SOFT_RESET, 0x00);
    sleep_ms(100);
    ret = writeReg(SOFT_RESET, 0x01);

    sleep_ms(100);

    startTimeout();

    writeReg(PAD_I2C_HV__EXTSUP_CONFIG, readReg(PAD_I2C_HV__EXTSUP_CONFIG) | 0x01);

    fast_osc_frequency = readReg16Bit(OSC_MEASURED__FAST_OSC__FREQUENCY);
    osc_calibrate_val = readReg16Bit(RESULT__OSC_CALIBRATE_VAL);

    writeReg16Bit(DSS_CONFIG__TARGET_TOTAL_RATE_MCPS, TargetRate); // should already be this value after reset
    writeReg(GPIO__TIO_HV_STATUS, 0x02);
    writeReg(SIGMA_ESTIMATOR__EFFECTIVE_PULSE_WIDTH_NS, 8); // tuning parm default
    writeReg(SIGMA_ESTIMATOR__EFFECTIVE_AMBIENT_WIDTH_NS, 16); // tuning parm default
    writeReg(ALGO__CROSSTALK_COMPENSATION_VALID_HEIGHT_MM, 0x01);
    writeReg(ALGO__RANGE_IGNORE_VALID_HEIGHT_MM, 0xFF);
    writeReg(ALGO__RANGE_MIN_CLIP, 0); // tuning parm default
    writeReg(ALGO__CONSISTENCY_CHECK__TOLERANCE, 2); // tuning parm default

    // general config
    writeReg16Bit(SYSTEM__THRESH_RATE_HIGH, 0x0000);
    writeReg16Bit(SYSTEM__THRESH_RATE_LOW, 0x0000);
    writeReg(DSS_CONFIG__APERTURE_ATTENUATION, 0x38);

    // timing config
    // most of these settings will be determined later by distance and timing
    // budget configuration
    writeReg16Bit(RANGE_CONFIG__SIGMA_THRESH, 360); // tuning parm default
    writeReg16Bit(RANGE_CONFIG__MIN_COUNT_RATE_RTN_LIMIT_MCPS, 192); // tuning parm default

    // dynamic config
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_0, 0x01);
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_1, 0x01);
    writeReg(SD_CONFIG__QUANTIFIER, 2); // tuning parm default

    // VL53L1_preset_mode_standard_ranging() end

    // from VL53L1_preset_mode_timed_ranging_*
    // GPH is 0 after reset, but writing GPH0 and GPH1 above seem to set GPH to 1,
    // and things don't seem to work if we don't set GPH back to 0 (which the API
    // does here).
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_0, 0x01);
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_1, 0x01);
    writeReg(SD_CONFIG__QUANTIFIER, 2);
    
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD, 0x00);
    writeReg(SYSTEM__SEED_CONFIG, 1); // tuning parm default

    // from VL53L1_config_low_power_auto_mode
    writeReg(SYSTEM__SEQUENCE_CONFIG, 0x8B); // VHV, PHASECAL, DSS1, RANGE
    writeReg16Bit(DSS_CONFIG__MANUAL_EFFECTIVE_SPADS_SELECT, 200 << 8);
    writeReg(DSS_CONFIG__ROI_MODE_CONTROL, 2); // REQUESTED_EFFFECTIVE_SPADS

    setDistanceMode(Long);
    setMeasurementTimingBudget(50000);

    writeReg16Bit(ALGO__PART_TO_PART_RANGE_OFFSET_MM, readReg16Bit(MM_CONFIG__OUTER_OFFSET_MM) * 4);

    sleep_ms(100);
    startContinuous(50);

    return ret;
}
