==> dekuNukem/daytripper/firmware/others/experimental/tx_eeprom_new_sensor/Src/VL53L1X.c <==
#include <VL53L1X.h>
#include <string.h>
#include "shared.h"
#include "helpers.h"

uint8_t VL53L1X_init()
{
  // check model ID and module type registers (values specified in datasheet)
  if (readReg16Bit(IDENTIFICATION__MODEL_ID) != 0xEACC) { return 0; }

  // VL53L1_software_reset() begin

  writeReg(SOFT_RESET, 0x00);
  //delayMicroseconds(100);
	HAL_Delay(1);
  writeReg(SOFT_RESET, 0x01);

  // give it some time to boot; otherwise the sensor NACKs during the readReg()
  // call below and the Arduino 101 doesn't seem to handle that well
  HAL_Delay(1);

  // VL53L1_poll_for_boot_completion() begin

  startTimeout();

  // check last_status in case we still get a NACK to try to deal with it correctly
  while ((readReg(FIRMWARE__SYSTEM_STATUS) & 0x01) == 0 || last_status != 0)
  {
    if (checkTimeoutExpired())
    {
      did_timeout = 1;
      return 0;
    }
  }
  // VL53L1_poll_for_boot_completion() end

  // VL53L1_software_reset() end

  // VL53L1_DataInit() begin

  // sensor uses 1V8 mode for I/O by default; switch to 2V8 mode if necessary
  writeReg(PAD_I2C_HV__EXTSUP_CONFIG,
  readReg(PAD_I2C_HV__EXTSUP_CONFIG) | 0x01);

  // store oscillator info for later use
  fast_osc_frequency = readReg16Bit(OSC_MEASURED__FAST_OSC__FREQUENCY);
  osc_calibrate_val = readReg16Bit(RESULT__OSC_CALIBRATE_VAL);

  // VL53L1_DataInit() end

  // VL53L1_StaticInit() begin

  // Note that the API does not actually apply the configuration settings below
  // when VL53L1_StaticInit() is called: it keeps a copy of the sensor's
  // register contents in memory and doesn't actually write them until a
  // measurement is started. Writing the configuration here means we don't have
  // to keep it all in memory and avoids a lot of redundant writes later.

  // the API sets the preset mode to LOWPOWER_AUTONOMOUS here:
  // VL53L1_set_preset_mode() begin

  // VL53L1_preset_mode_standard_ranging() begin

  // values labeled "tuning parm default" are from vl53l1_tuning_parm_defaults.h
  // (API uses these in VL53L1_init_tuning_parm_storage_struct())

  // static config
  // API resets PAD_I2C_HV__EXTSUP_CONFIG here, but maybe we don't want to do
  // that? (seems like it would disable 2V8 mode)
  writeReg16Bit(DSS_CONFIG__TARGET_TOTAL_RATE_MCPS, TargetRate); // should already be this value after reset
  writeReg(GPIO__TIO_HV_STATUS, 0x02);
  writeReg(SIGMA_ESTIMATOR__EFFECTIVE_PULSE_WIDTH_NS, 8); // tuning parm default
  writeReg(SIGMA_ESTIMATOR__EFFECTIVE_AMBIENT_WIDTH_NS, 16); // tuning parm default
  writeReg(ALGO__CROSSTALK_COMPENSATION_VALID_HEIGHT_MM, 0x01);
  writeReg(ALGO__RANGE_IGNORE_VALID_HEIGHT_MM, 0xFF);
  writeReg(ALGO__RANGE_MIN_CLIP, 0); // tuning parm default
  writeReg(ALGO__CONSISTENCY_CHECK__TOLERANCE, 2); // tuning parm default

  // general config
  writeReg16Bit(SYSTEM__THRESH_RATE_HIGH, 0x0000);
  writeReg16Bit(SYSTEM__THRESH_RATE_LOW, 0x0000);
  writeReg(DSS_CONFIG__APERTURE_ATTENUATION, 0x38);

  // timing config
  // most of these settings will be determined later by distance and timing
  // budget configuration
  writeReg16Bit(RANGE_CONFIG__SIGMA_THRESH, 360); // tuning parm default
  writeReg16Bit(RANGE_CONFIG__MIN_COUNT_RATE_RTN_LIMIT_MCPS, 192); // tuning parm default

  // dynamic config

  writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_0, 0x01);
  writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_1, 0x01);
  writeReg(SD_CONFIG__QUANTIFIER, 2); // tuning parm default

  // VL53L1_preset_mode_standard_ranging() end

  // from VL53L1_preset_mode_timed_ranging_*
  // GPH is 0 after reset, but writing GPH0 and GPH1 above seem to set GPH to 1,
  // and things don't seem to work if we don't set GPH back to 0 (which the API
  // does here).
  writeReg(SYSTEM__GROUPED_PARAMETER_HOLD, 0x00);
  writeReg(SYSTEM__SEED_CONFIG, 1); // tuning parm default

  // from VL53L1_config_low_power_auto_mode
  writeReg(SYSTEM__SEQUENCE_CONFIG, 0x8B); // VHV, PHASECAL, DSS1, RANGE
  writeReg16Bit(DSS_CONFIG__MANUAL_EFFECTIVE_SPADS_SELECT, 200 << 8);
  writeReg(DSS_CONFIG__ROI_MODE_CONTROL, 2); // REQUESTED_EFFFECTIVE_SPADS

  // VL53L1_set_preset_mode() end

  // default to long range, 50 ms timing budget
  // note that this is different than what the API defaults to
  setDistanceMode(Long);
  setMeasurementTimingBudget(33333);

  // VL53L1_StaticInit() end

  // the API triggers this change in VL53L1_init_and_start_range() once a
  // measurement is started; assumes MM1 and MM2 are disabled
  writeReg16Bit(ALGO__PART_TO_PART_RANGE_OFFSET_MM,
  readReg16Bit(MM_CONFIG__OUTER_OFFSET_MM) * 4);

  return 1;
}

void writeReg(uint16_t reg, uint8_t value)
{
  // Wire.beginTransmission(address);
  // Wire.write((reg >> 8) & 0xFF); // reg high byte
  // Wire.write( reg       & 0xFF); // reg low byte
  // Wire.write(value);
  // last_status = Wire.endTransmission();

  last_status = HAL_I2C_Mem_Write(&hi2c1, address, reg, 2, &value, 1, 17);
}

void writeReg16Bit(uint16_t reg, uint16_t value)
{
  // Wire.beginTransmission(address);
  // Wire.write((reg >> 8) & 0xFF); // reg high byte
  // Wire.write( reg       & 0xFF); // reg low byte
  // Wire.write((value >> 8) & 0xFF); // value high byte
  // Wire.write( value       & 0xFF); // value low byte
  // last_status = Wire.endTransmission();

  uint8_t buf[2];
  buf[0] = (value >> 8) & 0xFF;
  buf[1] = value & 0xFF;
  last_status = HAL_I2C_Mem_Write(&hi2c1, address, reg, 2, buf, 2, 17);
}

void writeReg32Bit(uint16_t reg, uint32_t value)
{
  // Wire.beginTransmission(address);
  // Wire.write((reg >> 8) & 0xFF); // reg high byte
  // Wire.write( reg       & 0xFF); // reg low byte
  // Wire.write((value >> 24) & 0xFF); // value highest byte
  // Wire.write((value >> 16) & 0xFF);
  // Wire.write((value >>  8) & 0xFF);
  // Wire.write( value        & 0xFF); // value lowest byte
  // last_status = Wire.endTransmission();

  uint8_t buf[4];
  buf[0] = (value >> 24) & 0xFF;
  buf[1] = (value >> 16) & 0xFF;
  buf[2] = (value >> 8) & 0xFF;
  buf[3] = value & 0xFF;
  last_status = HAL_I2C_Mem_Write(&hi2c1, address, reg, 2, buf, 4, 17);
}

uint8_t readReg(regAddr reg)
{
  uint8_t value;

  // Wire.beginTransmission(address);
  // Wire.write((reg >> 8) & 0xFF); // reg high byte
  // Wire.write( reg       & 0xFF); // reg low byte
  // last_status = Wire.endTransmission();

  // Wire.requestFrom(address, (uint8_t)1);
  // value = Wire.read();

  last_status = HAL_I2C_Mem_Read(&hi2c1, address, reg, 2, &value, 1, 17);
  return value;
}

uint16_t readReg16Bit(uint16_t reg)
{
  uint16_t value;

  // Wire.beginTransmission(address);
  // Wire.write((reg >> 8) & 0xFF); // reg high byte
  // Wire.write( reg       & 0xFF); // reg low byte
  // last_status = Wire.endTransmission();

  // Wire.requestFrom(address, (uint8_t)2);
  // value  = (uint16_t)Wire.read() << 8; // value high byte
  // value |=           Wire.read();      // value low byte

  uint8_t buf[2];
  last_status = HAL_I2C_Mem_Read(&hi2c1, address, reg, 2, buf, 2, 17);
  value = (uint16_t)buf[0] << 8;
  value |= buf[1];
  return value;
}

uint32_t readReg32Bit(uint16_t reg)
{
  uint32_t value;

  // Wire.beginTransmission(address);
  // Wire.write((reg >> 8) & 0xFF); // reg high byte
  // Wire.write( reg       & 0xFF); // reg low byte
  // last_status = Wire.endTransmission();

  // Wire.requestFrom(address, (uint8_t)4);
  // value  = (uint32_t)Wire.read() << 24; // value highest byte
  // value |= (uint32_t)Wire.read() << 16;
  // value |= (uint16_t)Wire.read() <<  8;
  // value |=           Wire.read();       // value lowest byte

  uint8_t buf[4];
  last_status = HAL_I2C_Mem_Read(&hi2c1, address, reg, 2, buf, 4, 17);
  
  value = (uint32_t)buf[0] << 24;
  value = (uint32_t)buf[1] << 16;
  value = (uint16_t)buf[2] << 8;
  value |= buf[3];

  return value;
}
